// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`importFromChromeCPUProfile 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": 1,
      "file": "",
      "key": "(anonymous)::1:1",
      "line": 1,
      "name": "(anonymous)",
      "selfWeight": 1060,
      "totalWeight": 34345,
    },
    Frame {
      "col": 11,
      "file": "",
      "key": "a::1:11",
      "line": 1,
      "name": "a",
      "selfWeight": 0,
      "totalWeight": 33285,
    },
    Frame {
      "col": 11,
      "file": "",
      "key": "b::6:11",
      "line": 6,
      "name": "b",
      "selfWeight": 0,
      "totalWeight": 17002,
    },
    Frame {
      "col": 11,
      "file": "",
      "key": "d::14:11",
      "line": 14,
      "name": "d",
      "selfWeight": 33285,
      "totalWeight": 33285,
    },
    Frame {
      "col": 11,
      "file": "",
      "key": "c::10:11",
      "line": 10,
      "name": "c",
      "selfWeight": 0,
      "totalWeight": 16283,
    },
  ],
  "name": "simple.cpuprofile",
  "stacks": Array [
    " 11.57ms",
    "(anonymous) 1.06ms",
    "(anonymous);a;b;d 17.00ms",
    "(anonymous);a;c;d 16.28ms",
  ],
}
`;

exports[`importFromChromeCPUProfile: indexToView 1`] = `0`;

exports[`importFromChromeCPUProfile: profileGroup.name 1`] = `"simple.cpuprofile"`;

exports[`importFromChromeTimeline 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": 0,
      "file": "",
      "key": "(program)::0:0",
      "line": 0,
      "name": "(program)",
      "selfWeight": 2299,
      "totalWeight": 2299,
    },
    Frame {
      "col": 11,
      "file": "file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js",
      "key": "a:file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js:1:11",
      "line": 1,
      "name": "a",
      "selfWeight": 0,
      "totalWeight": 33186,
    },
    Frame {
      "col": 11,
      "file": "file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js",
      "key": "c:file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js:14:11",
      "line": 14,
      "name": "c",
      "selfWeight": 16275,
      "totalWeight": 16275,
    },
    Frame {
      "col": 11,
      "file": "file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js",
      "key": "b:file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js:8:11",
      "line": 8,
      "name": "b",
      "selfWeight": 16911,
      "totalWeight": 16911,
    },
  ],
  "name": "simple-timeline.json",
  "stacks": Array [
    " 10.06ms",
    "(program) 202.00µs",
    " 1.97ms",
    "(program) 1.04ms",
    " 85.89ms",
    "(program) 132.00µs",
    " 8.40ms",
    "(program) 134.00µs",
    "a;c 273.00µs",
    "a;b 513.00µs",
    "a;c 512.00µs",
    "a;b 513.00µs",
    "a;c 262.00µs",
    "a;b 514.00µs",
    "a;c 517.00µs",
    "a;b 261.00µs",
    "a;c 515.00µs",
    "a;b 273.00µs",
    "a;c 134.00µs",
    "a;b 146.00µs",
    "a;c 291.00µs",
    "a;b 256.00µs",
    "a;c 145.00µs",
    "a;b 134.00µs",
    "a;c 273.00µs",
    "a;b 141.00µs",
    "a;c 139.00µs",
    "a;b 130.00µs",
    "a;c 393.00µs",
    "a;b 131.00µs",
    "a;c 126.00µs",
    "a;b 129.00µs",
    "a;c 520.00µs",
    "a;b 129.00µs",
    "a;c 259.00µs",
    "a;b 130.00µs",
    "a;c 128.00µs",
    "a;b 136.00µs",
    "a;c 137.00µs",
    "a;b 281.00µs",
    "a;c 150.00µs",
    "a;b 624.00µs",
    "a;c 135.00µs",
    "a;b 129.00µs",
    "a;c 604.00µs",
    "a;b 292.00µs",
    "a;c 257.00µs",
    "a;b 127.00µs",
    "a;c 128.00µs",
    "a;b 118.00µs",
    "a;c 256.00µs",
    "a;b 524.00µs",
    "a;c 129.00µs",
    "a;b 131.00µs",
    "a;c 125.00µs",
    "a;b 263.00µs",
    "a;c 123.00µs",
    "a;b 128.00µs",
    "a;c 129.00µs",
    "a;b 265.00µs",
    "a;c 128.00µs",
    "a;b 280.00µs",
    "a;c 366.00µs",
    "a;b 931.00µs",
    "a;c 148.00µs",
    "a;b 147.00µs",
    "a;c 302.00µs",
    "a;b 151.00µs",
    "a;c 158.00µs",
    "a;b 456.00µs",
    "a;c 170.00µs",
    "a;b 139.00µs",
    "a;c 145.00µs",
    "a;b 260.00µs",
    "a;c 141.00µs",
    "a;b 280.00µs",
    "a;c 268.00µs",
    "a;b 289.00µs",
    "a;c 146.00µs",
    "a;b 120.00µs",
    "a;c 436.00µs",
    "a;b 147.00µs",
    "a;c 164.00µs",
    "a;b 294.00µs",
    "a;c 147.00µs",
    "a;b 856.00µs",
    "a;c 273.00µs",
    "a;b 139.00µs",
    "a;c 269.00µs",
    "a;b 256.00µs",
    "a;c 258.00µs",
    "a;b 128.00µs",
    "a;c 255.00µs",
    "a;b 140.00µs",
    "a;c 514.00µs",
    "a;b 129.00µs",
    "a;c 395.00µs",
    "a;b 389.00µs",
    "a;c 257.00µs",
    "a;b 686.00µs",
    "a;c 147.00µs",
    "a;b 156.00µs",
    "a;c 137.00µs",
    "a;b 141.00µs",
    "a;c 140.00µs",
    "a;b 141.00µs",
    "a;c 141.00µs",
    "a;b 140.00µs",
    "a;c 140.00µs",
    "a;b 139.00µs",
    "a;c 129.00µs",
    "a;b 149.00µs",
    "a;c 267.00µs",
    "a;b 294.00µs",
    "a;c 145.00µs",
    "a;b 294.00µs",
    "a;c 294.00µs",
    "a;b 295.00µs",
    "a;c 140.00µs",
    "a;b 139.00µs",
    "a;c 139.00µs",
    "a;b 127.00µs",
    "a;c 513.00µs",
    "a;b 516.00µs",
    "a;c 385.00µs",
    "a;b 520.00µs",
    "a;c 252.00µs",
    "a;b 255.00µs",
    "a;c 134.00µs",
    "a;b 112.00µs",
    "a;c 140.00µs",
    "a;b 296.00µs",
    "a;c 441.00µs",
    "a;b 145.00µs",
    "a;c 292.00µs",
    "a;b 130.00µs",
    "a;c 277.00µs",
    "a;b 147.00µs",
    "a;c 286.00µs",
    "a;b 140.00µs",
    "a;c 136.00µs",
    " 61.59ms",
    "(program) 134.00µs",
    " 128.00µs",
    "(program) 141.00µs",
    " 16.39ms",
    "(program) 145.00µs",
    " 16.63ms",
    "(program) 131.00µs",
    " 16.71ms",
    "(program) 131.00µs",
    " 294.15ms",
    "(program) 109.00µs",
  ],
}
`;

exports[`importFromChromeTimeline Chrome 69 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": 1,
      "file": "extensions::SafeBuiltins",
      "key": "(anonymous extensions::SafeBuiltins:1):extensions::SafeBuiltins:1:1",
      "line": 1,
      "name": "(anonymous extensions::SafeBuiltins:1)",
      "selfWeight": 0,
      "totalWeight": 3188,
    },
    Frame {
      "col": 10,
      "file": "extensions::SafeBuiltins",
      "key": "(anonymous extensions::SafeBuiltins:1):extensions::SafeBuiltins:1:10",
      "line": 1,
      "name": "(anonymous extensions::SafeBuiltins:1)",
      "selfWeight": 0,
      "totalWeight": 3188,
    },
    Frame {
      "col": 21,
      "file": "extensions::SafeBuiltins",
      "key": "saveBuiltin:extensions::SafeBuiltins:25:21",
      "line": 25,
      "name": "saveBuiltin",
      "selfWeight": 302,
      "totalWeight": 3188,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "(program):undefined:undefined:undefined",
      "line": undefined,
      "name": "(program)",
      "selfWeight": 6862,
      "totalWeight": 6862,
    },
    Frame {
      "col": 1,
      "file": "file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js",
      "key": "(anonymous simple.js:1):file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js:1:1",
      "line": 1,
      "name": "(anonymous simple.js:1)",
      "selfWeight": 136,
      "totalWeight": 37217,
    },
    Frame {
      "col": 15,
      "file": "file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js",
      "key": "alpha:file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js:1:15",
      "line": 1,
      "name": "alpha",
      "selfWeight": 873,
      "totalWeight": 37081,
    },
    Frame {
      "col": 14,
      "file": "file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js",
      "key": "beta:file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js:8:14",
      "line": 8,
      "name": "beta",
      "selfWeight": 7552,
      "totalWeight": 17562,
    },
    Frame {
      "col": 15,
      "file": "file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js",
      "key": "gamma:file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js:20:15",
      "line": 20,
      "name": "gamma",
      "selfWeight": 20018,
      "totalWeight": 20018,
    },
    Frame {
      "col": 15,
      "file": "file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js",
      "key": "delta:file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js:14:15",
      "line": 14,
      "name": "delta",
      "selfWeight": 7179,
      "totalWeight": 18646,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "(garbage collector):undefined:undefined:undefined",
      "line": undefined,
      "name": "(garbage collector)",
      "selfWeight": 646,
      "totalWeight": 778,
    },
  ],
  "name": "simple.json",
  "stacks": Array [
    " 6.85ms",
    "(anonymous extensions::SafeBuiltins:1);(anonymous extensions::SafeBuiltins:1);saveBuiltin 302.00µs",
    "(anonymous extensions::SafeBuiltins:1);(anonymous extensions::SafeBuiltins:1);saveBuiltin;(program) 2.89ms",
    " 230.00µs",
    "(program) 828.00µs",
    " 110.00µs",
    "(program) 118.00µs",
    " 323.00µs",
    "(program) 123.00µs",
    " 139.00µs",
    "(program) 400.00µs",
    "(anonymous simple.js:1) 136.00µs",
    "(anonymous simple.js:1);alpha;beta 108.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 268.00µs",
    "(anonymous simple.js:1);alpha 137.00µs",
    "(anonymous simple.js:1);alpha;delta 139.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 261.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 964.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 268.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 265.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 582.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 135.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 147.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 163.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 133.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 144.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 276.00µs",
    "(anonymous simple.js:1);alpha;delta 136.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 144.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 431.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 419.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 134.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 136.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 144.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 269.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 160.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 141.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 292.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 583.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 149.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 139.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 133.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 386.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 385.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 391.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 261.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 131.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 132.00µs",
    "(anonymous simple.js:1);alpha 144.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 134.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 146.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 119.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 120.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 134.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 1.47ms",
    "(anonymous simple.js:1);alpha;delta;gamma 148.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 147.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 146.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 269.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 138.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 509.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 1.63ms",
    "(anonymous simple.js:1);alpha;beta;gamma 432.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 129.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 139.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 389.00µs",
    "(anonymous simple.js:1);alpha;beta 133.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 133.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 803.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 283.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 152.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 135.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 132.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 134.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 154.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 145.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 516.00µs",
    "(anonymous simple.js:1);alpha;delta 128.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 138.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 139.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 253.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 145.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 450.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 142.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 125.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 289.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 293.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 147.00µs",
    "(anonymous simple.js:1);alpha 443.00µs",
    "(anonymous simple.js:1);alpha;delta;gamma 133.00µs",
    "(anonymous simple.js:1);alpha;beta;gamma 409.00µs",
    "(anonymous simple.js:1);alpha;beta 385.00µs",
    "(anonymous simple.js:1);alpha;delta 659.00µs",
    "(anonymous simple.js:1);alpha;beta 253.00µs",
    "(anonymous simple.js:1);alpha;delta 257.00µs",
    "(anonymous simple.js:1);alpha;beta 256.00µs",
    "(anonymous simple.js:1);alpha;delta 129.00µs",
    "(anonymous simple.js:1);alpha;beta 260.00µs",
    "(anonymous simple.js:1);alpha;delta 255.00µs",
    "(anonymous simple.js:1);alpha;beta 129.00µs",
    "(anonymous simple.js:1);alpha;delta 140.00µs",
    "(anonymous simple.js:1);alpha;beta 136.00µs",
    "(anonymous simple.js:1);alpha;delta 134.00µs",
    "(anonymous simple.js:1);alpha;beta 283.00µs",
    "(anonymous simple.js:1);alpha;delta 253.00µs",
    "(anonymous simple.js:1);alpha;beta 397.00µs",
    "(anonymous simple.js:1);alpha;delta 401.00µs",
    "(anonymous simple.js:1);alpha;beta 267.00µs",
    "(anonymous simple.js:1);alpha;delta 283.00µs",
    "(anonymous simple.js:1);alpha;beta 137.00µs",
    "(anonymous simple.js:1);alpha;delta 134.00µs",
    "(anonymous simple.js:1);alpha;beta 403.00µs",
    "(anonymous simple.js:1);alpha;delta 135.00µs",
    "(anonymous simple.js:1);alpha;beta 658.00µs",
    "(anonymous simple.js:1);alpha;delta 117.00µs",
    "(anonymous simple.js:1);alpha;beta 257.00µs",
    "(anonymous simple.js:1);alpha;delta 134.00µs",
    "(anonymous simple.js:1);alpha;beta 143.00µs",
    "(anonymous simple.js:1);alpha;delta 260.00µs",
    "(anonymous simple.js:1);alpha 149.00µs",
    "(anonymous simple.js:1);alpha;delta 146.00µs",
    "(anonymous simple.js:1);alpha;beta 129.00µs",
    "(anonymous simple.js:1);alpha;delta 131.00µs",
    "(anonymous simple.js:1);alpha;beta 130.00µs",
    "(anonymous simple.js:1);alpha;delta 665.00µs",
    "(anonymous simple.js:1);alpha;beta 415.00µs",
    "(anonymous simple.js:1);alpha;delta 264.00µs",
    "(anonymous simple.js:1);alpha;beta 527.00µs",
    "(anonymous simple.js:1);alpha;delta 140.00µs",
    "(anonymous simple.js:1);alpha;beta 269.00µs",
    "(anonymous simple.js:1);alpha;delta 135.00µs",
    "(anonymous simple.js:1);alpha;beta 386.00µs",
    "(anonymous simple.js:1);alpha;delta 559.00µs",
    "(anonymous simple.js:1);alpha;beta 131.00µs",
    "(anonymous simple.js:1);alpha;delta 140.00µs",
    "(anonymous simple.js:1);alpha;beta 129.00µs",
    "(anonymous simple.js:1);alpha;delta 400.00µs",
    "(anonymous simple.js:1);alpha;beta 134.00µs",
    "(anonymous simple.js:1);alpha;delta 634.00µs",
    "(anonymous simple.js:1);alpha;beta 1.10ms",
    "(anonymous simple.js:1);alpha;delta 271.00µs",
    "(anonymous simple.js:1);alpha;delta;(program) 1.46ms",
    " 430.00µs",
    "(program) 781.00µs",
    " 273.00µs",
    "(garbage collector) 646.00µs",
    "(garbage collector);(program) 132.00µs",
    " 26.36ms",
    "(program) 135.00µs",
  ],
}
`;

exports[`importFromChromeTimeline Chrome 69: indexToView 1`] = `0`;

exports[`importFromChromeTimeline Chrome 69: profileGroup.name 1`] = `"simple.json"`;

exports[`importFromChromeTimeline Workers Chrome 66 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": 0,
      "file": "",
      "key": "(program)::0:0",
      "line": 0,
      "name": "(program)",
      "selfWeight": 106601,
      "totalWeight": 108131,
    },
    Frame {
      "col": 9,
      "file": "",
      "key": "(anonymous)::248:9",
      "line": 248,
      "name": "(anonymous)",
      "selfWeight": 551,
      "totalWeight": 2766,
    },
    Frame {
      "col": 0,
      "file": "",
      "key": "addEventListener::0:0",
      "line": 0,
      "name": "addEventListener",
      "selfWeight": 178,
      "totalWeight": 2215,
    },
    Frame {
      "col": 18,
      "file": "",
      "key": "onLoaded::867:18",
      "line": 867,
      "name": "onLoaded",
      "selfWeight": 372,
      "totalWeight": 5158,
    },
    Frame {
      "col": 1,
      "file": "",
      "key": "(anonymous)::1:1",
      "line": 1,
      "name": "(anonymous)",
      "selfWeight": 0,
      "totalWeight": 25649,
    },
    Frame {
      "col": 18,
      "file": "",
      "key": "dispatch::846:18",
      "line": 846,
      "name": "dispatch",
      "selfWeight": 1103,
      "totalWeight": 25649,
    },
    Frame {
      "col": 21,
      "file": "",
      "key": "setPlatform::840:21",
      "line": 840,
      "name": "setPlatform",
      "selfWeight": 0,
      "totalWeight": 902,
    },
    Frame {
      "col": 0,
      "file": "",
      "key": "add::0:0",
      "line": 0,
      "name": "add",
      "selfWeight": 521,
      "totalWeight": 902,
    },
    Frame {
      "col": 15,
      "file": "",
      "key": "reset::434:15",
      "line": 434,
      "name": "reset",
      "selfWeight": 911,
      "totalWeight": 2438,
    },
    Frame {
      "col": 0,
      "file": "",
      "key": "getContext::0:0",
      "line": 0,
      "name": "getContext",
      "selfWeight": 598,
      "totalWeight": 598,
    },
    Frame {
      "col": 21,
      "file": "",
      "key": "resetCanvas::424:21",
      "line": 424,
      "name": "resetCanvas",
      "selfWeight": 370,
      "totalWeight": 553,
    },
    Frame {
      "col": 0,
      "file": "",
      "key": "scale::0:0",
      "line": 0,
      "name": "scale",
      "selfWeight": 183,
      "totalWeight": 183,
    },
    Frame {
      "col": 9,
      "file": "http://172.30.3.176:7777/worker.html",
      "key": "(anonymous worker.html:1):http://172.30.3.176:7777/worker.html:1:9",
      "line": 1,
      "name": "(anonymous worker.html:1)",
      "selfWeight": 0,
      "totalWeight": 2524,
    },
    Frame {
      "col": 0,
      "file": "",
      "key": "Worker::0:0",
      "line": 0,
      "name": "Worker",
      "selfWeight": 806,
      "totalWeight": 2524,
    },
    Frame {
      "col": 30,
      "file": "http://172.30.3.176:7777/worker.html",
      "key": "worker.onmessage:http://172.30.3.176:7777/worker.html:20:30",
      "line": 20,
      "name": "worker.onmessage",
      "selfWeight": 1221,
      "totalWeight": 60859,
    },
    Frame {
      "col": 17,
      "file": "http://172.30.3.176:7777/worker.html",
      "key": "apple:http://172.30.3.176:7777/worker.html:10:17",
      "line": 10,
      "name": "apple",
      "selfWeight": 5474,
      "totalWeight": 58863,
    },
    Frame {
      "col": 18,
      "file": "http://172.30.3.176:7777/worker.html",
      "key": "banana:http://172.30.3.176:7777/worker.html:2:18",
      "line": 2,
      "name": "banana",
      "selfWeight": 50635,
      "totalWeight": 53816,
    },
    Frame {
      "col": 0,
      "file": "",
      "key": "postMessage::0:0",
      "line": 0,
      "name": "postMessage",
      "selfWeight": 348,
      "totalWeight": 348,
    },
    Frame {
      "col": 0,
      "file": "",
      "key": "(garbage collector)::0:0",
      "line": 0,
      "name": "(garbage collector)",
      "selfWeight": 1530,
      "totalWeight": 1530,
    },
  ],
  "name": "worker.json - CrRendererMain",
  "stacks": Array [
    " 28.66ms",
    "(program) 315.00µs",
    " 108.00µs",
    "(program) 433.00µs",
    " 116.00µs",
    "(program) 436.00µs",
    " 368.00µs",
    "(program) 108.00µs",
    " 30.76ms",
    "(program) 1.48ms",
    " 167.00µs",
    "(program) 1.68ms",
    " 6.96ms",
    "(program) 2.03ms",
    " 4.64ms",
    "(program) 3.86ms",
    " 14.05ms",
    "(program) 15.35ms",
    "(anonymous) 551.00µs",
    "(anonymous);addEventListener 178.00µs",
    "(anonymous);addEventListener;(program) 2.04ms",
    "onLoaded 372.00µs",
    "onLoaded;(program) 4.79ms",
    "(anonymous);dispatch;setPlatform;add 521.00µs",
    "(anonymous);dispatch;setPlatform;add;(program) 381.00µs",
    "(anonymous);dispatch 927.00µs",
    "(anonymous);dispatch;reset 185.00µs",
    "(anonymous);dispatch;reset;getContext 598.00µs",
    "(anonymous);dispatch;reset 131.00µs",
    "(anonymous);dispatch;reset;resetCanvas 370.00µs",
    "(anonymous);dispatch;reset;resetCanvas;scale 183.00µs",
    "(anonymous);dispatch;reset 595.00µs",
    "(anonymous);dispatch;reset;(program) 376.00µs",
    "(anonymous);dispatch 176.00µs",
    "(anonymous);dispatch;(program) 21.21ms",
    " 606.00µs",
    "(program) 11.20ms",
    " 296.00µs",
    "(program) 1.90ms",
    "(anonymous worker.html:1);Worker 806.00µs",
    "(anonymous worker.html:1);Worker;(program) 1.72ms",
    " 670.00µs",
    "(program) 28.45ms",
    " 353.00µs",
    "(program) 187.00µs",
    " 185.00µs",
    "(program) 4.29ms",
    " 607.00µs",
    "(program) 192.00µs",
    " 407.00µs",
    "(program) 215.00µs",
    " 28.98ms",
    "(program) 770.00µs",
    "worker.onmessage;apple 185.00µs",
    "worker.onmessage;apple;banana 180.00µs",
    "worker.onmessage;apple 367.00µs",
    "worker.onmessage;apple;banana 182.00µs",
    "worker.onmessage;apple 183.00µs",
    "worker.onmessage;apple;banana 546.00µs",
    "worker.onmessage;apple 365.00µs",
    "worker.onmessage;apple;banana 182.00µs",
    "worker.onmessage;apple 365.00µs",
    "worker.onmessage;apple;banana 188.00µs",
    "worker.onmessage;apple 912.00µs",
    "worker.onmessage;apple;banana 189.00µs",
    "worker.onmessage;apple 2.51ms",
    "worker.onmessage;apple;banana 8.48ms",
    "worker.onmessage;postMessage 170.00µs",
    " 3.95ms",
    "worker.onmessage;apple;banana 433.00µs",
    "worker.onmessage 187.00µs",
    "worker.onmessage;apple;banana 3.30ms",
    " 3.90ms",
    "(program) 187.00µs",
    "worker.onmessage;apple;banana 1.47ms",
    "worker.onmessage;apple 187.00µs",
    "worker.onmessage;apple;banana 2.05ms",
    " 4.01ms",
    "worker.onmessage;apple;banana 3.77ms",
    "worker.onmessage;postMessage 178.00µs",
    " 3.87ms",
    "worker.onmessage;apple;banana 3.74ms",
    "worker.onmessage 233.00µs",
    " 3.88ms",
    "(program) 187.00µs",
    "worker.onmessage;apple;banana 744.00µs",
    "worker.onmessage;apple 196.00µs",
    "worker.onmessage;apple;banana 2.08ms",
    "worker.onmessage 188.00µs",
    "worker.onmessage;apple;banana 582.00µs",
    " 4.46ms",
    "(program) 187.00µs",
    "worker.onmessage;apple;banana 3.84ms",
    "worker.onmessage;apple;banana;(program) 278.00µs",
    " 4.76ms",
    "worker.onmessage;apple;banana 5.01ms",
    "worker.onmessage;apple;banana;(program) 214.00µs",
    " 4.67ms",
    "(program) 193.00µs",
    "worker.onmessage;apple;banana 2.44ms",
    "worker.onmessage 186.00µs",
    "worker.onmessage;apple;banana 1.02ms",
    "worker.onmessage;banana 209.00µs",
    "worker.onmessage;apple;banana 207.00µs",
    "worker.onmessage;apple 207.00µs",
    "worker.onmessage;apple;banana 634.00µs",
    "worker.onmessage;apple;banana;(program) 237.00µs",
    " 4.92ms",
    "worker.onmessage;apple;banana 3.05ms",
    "worker.onmessage;banana 218.00µs",
    "worker.onmessage;apple;banana 876.00µs",
    "worker.onmessage 219.00µs",
    "worker.onmessage;apple;banana 219.00µs",
    "worker.onmessage;apple;banana;(program) 706.00µs",
    " 4.40ms",
    "worker.onmessage;apple;banana 2.71ms",
    "worker.onmessage 208.00µs",
    "worker.onmessage;apple;banana 2.08ms",
    "worker.onmessage;apple;banana;(program) 216.00µs",
    "worker.onmessage;apple;banana;(program);(garbage collector) 1.53ms",
    " 469.53ms",
    "(program) 382.00µs",
    " 262.13ms",
    "(program) 200.00µs",
    " 4.51ms",
    "(program) 221.00µs",
  ],
}
`;

exports[`importFromChromeTimeline Workers Chrome 66 2`] = `
Object {
  "frames": Array [
    Frame {
      "col": 0,
      "file": "",
      "key": "(program)::0:0",
      "line": 0,
      "name": "(program)",
      "selfWeight": 819120,
      "totalWeight": 819120,
    },
    Frame {
      "col": 21,
      "file": "http://172.30.3.176:7777/worker.js",
      "key": "onmessage:http://172.30.3.176:7777/worker.js:15:21",
      "line": 15,
      "name": "onmessage",
      "selfWeight": 639,
      "totalWeight": 857719,
    },
    Frame {
      "col": 15,
      "file": "http://172.30.3.176:7777/worker.js",
      "key": "alpha:http://172.30.3.176:7777/worker.js:9:15",
      "line": 9,
      "name": "alpha",
      "selfWeight": 19976,
      "totalWeight": 835149,
    },
    Frame {
      "col": 15,
      "file": "http://172.30.3.176:7777/worker.js",
      "key": "gamma:http://172.30.3.176:7777/worker.js:1:15",
      "line": 1,
      "name": "gamma",
      "selfWeight": 22197,
      "totalWeight": 30000,
    },
    Frame {
      "col": 0,
      "file": "",
      "key": "postMessage::0:0",
      "line": 0,
      "name": "postMessage",
      "selfWeight": 1278,
      "totalWeight": 21931,
    },
  ],
  "name": "worker.json - DedicatedWorker thread",
  "stacks": Array [
    " 9.07ms",
    "(program) 5.49ms",
    "onmessage;alpha;gamma 3.69ms",
    "onmessage;postMessage 212.00µs",
    "onmessage;postMessage;(program) 3.97ms",
    "onmessage;alpha;gamma 3.82ms",
    "onmessage;postMessage 414.00µs",
    "onmessage;postMessage;(program) 3.71ms",
    "onmessage;alpha;gamma 1.13ms",
    "onmessage 188.00µs",
    "onmessage;alpha;gamma 2.48ms",
    "onmessage;alpha;gamma;(program) 3.89ms",
    "onmessage;alpha;gamma 373.00µs",
    "onmessage;alpha 184.00µs",
    "onmessage;alpha;gamma 3.36ms",
    "onmessage;alpha;gamma;(program) 3.91ms",
    "onmessage;alpha;gamma 3.94ms",
    "onmessage;postMessage 205.00µs",
    "onmessage;postMessage;(program) 3.91ms",
    "onmessage 451.00µs",
    "onmessage;alpha;gamma 566.00µs",
    "onmessage;alpha 194.00µs",
    "onmessage;alpha;gamma 2.09ms",
    "onmessage;alpha 189.00µs",
    "onmessage;alpha;gamma 746.00µs",
    "onmessage;postMessage 211.00µs",
    "onmessage;postMessage;(program) 4.00ms",
    "onmessage;alpha 4.80ms",
    "onmessage;alpha;(program) 5.28ms",
    "onmessage;alpha 4.70ms",
    "onmessage;postMessage 236.00µs",
    "onmessage;postMessage;(program) 5.06ms",
    "onmessage;alpha 5.07ms",
    "onmessage;alpha;(program) 4.81ms",
    "onmessage;alpha 4.84ms",
    "onmessage;alpha;(program) 775.08ms",
  ],
}
`;

exports[`importFromChromeTimeline Workers Chrome 66: indexToView 1`] = `0`;

exports[`importFromChromeTimeline Workers Chrome 66: profileGroup.name 1`] = `"worker.json"`;

exports[`importFromChromeTimeline Workers Chrome 70 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": 1,
      "file": "extensions::SafeBuiltins",
      "key": "(anonymous extensions::SafeBuiltins:1):extensions::SafeBuiltins:1:1",
      "line": 1,
      "name": "(anonymous extensions::SafeBuiltins:1)",
      "selfWeight": 0,
      "totalWeight": 37463,
    },
    Frame {
      "col": 10,
      "file": "extensions::SafeBuiltins",
      "key": "(anonymous extensions::SafeBuiltins:1):extensions::SafeBuiltins:1:10",
      "line": 1,
      "name": "(anonymous extensions::SafeBuiltins:1)",
      "selfWeight": 0,
      "totalWeight": 37463,
    },
    Frame {
      "col": 21,
      "file": "extensions::SafeBuiltins",
      "key": "saveBuiltin:extensions::SafeBuiltins:25:21",
      "line": 25,
      "name": "saveBuiltin",
      "selfWeight": 233,
      "totalWeight": 9858,
    },
    Frame {
      "col": 22,
      "file": "extensions::SafeBuiltins",
      "key": "makeCallable:extensions::SafeBuiltins:7:22",
      "line": 7,
      "name": "makeCallable",
      "selfWeight": 122,
      "totalWeight": 7007,
    },
    Frame {
      "col": 33,
      "file": "extensions::SafeBuiltins",
      "key": "(anonymous extensions::SafeBuiltins:8):extensions::SafeBuiltins:8:33",
      "line": 8,
      "name": "(anonymous extensions::SafeBuiltins:8)",
      "selfWeight": 234,
      "totalWeight": 234,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "(program):undefined:undefined:undefined",
      "line": undefined,
      "name": "(program)",
      "selfWeight": 48725,
      "totalWeight": 48827,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "(garbage collector):undefined:undefined:undefined",
      "line": undefined,
      "name": "(garbage collector)",
      "selfWeight": 3380,
      "totalWeight": 3380,
    },
    Frame {
      "col": 1,
      "file": "chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js",
      "key": "(anonymous injected.min.js:1):chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js:1:1",
      "line": 1,
      "name": "(anonymous injected.min.js:1)",
      "selfWeight": 1550,
      "totalWeight": 15220,
    },
    Frame {
      "col": 467,
      "file": "chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js",
      "key": "La:chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js:35:467",
      "line": 35,
      "name": "La",
      "selfWeight": 407,
      "totalWeight": 11272,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "get webstore:undefined:undefined:undefined",
      "line": undefined,
      "name": "get webstore",
      "selfWeight": 287,
      "totalWeight": 15564,
    },
    Frame {
      "col": 10,
      "file": "extensions::runtime",
      "key": "(anonymous extensions::runtime:1):extensions::runtime:1:10",
      "line": 1,
      "name": "(anonymous extensions::runtime:1)",
      "selfWeight": 2319,
      "totalWeight": 15277,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "privates:undefined:undefined:undefined",
      "line": undefined,
      "name": "privates",
      "selfWeight": 1751,
      "totalWeight": 6636,
    },
    Frame {
      "col": 10,
      "file": "extensions::binding",
      "key": "(anonymous extensions::binding:1):extensions::binding:1:10",
      "line": 1,
      "name": "(anonymous extensions::binding:1)",
      "selfWeight": 791,
      "totalWeight": 4994,
    },
    Frame {
      "col": 10,
      "file": "extensions::event_bindings",
      "key": "(anonymous extensions::event_bindings:1):extensions::event_bindings:1:10",
      "line": 1,
      "name": "(anonymous extensions::event_bindings:1)",
      "selfWeight": 822,
      "totalWeight": 4068,
    },
    Frame {
      "col": 10,
      "file": "extensions::sendRequest",
      "key": "(anonymous extensions::sendRequest:1):extensions::sendRequest:1:10",
      "line": 1,
      "name": "(anonymous extensions::sendRequest:1)",
      "selfWeight": 761,
      "totalWeight": 2844,
    },
    Frame {
      "col": 10,
      "file": "extensions::schemaUtils",
      "key": "(anonymous extensions::schemaUtils:1):extensions::schemaUtils:1:10",
      "line": 1,
      "name": "(anonymous extensions::schemaUtils:1)",
      "selfWeight": 847,
      "totalWeight": 1814,
    },
    Frame {
      "col": 10,
      "file": "extensions::json_schema",
      "key": "(anonymous extensions::json_schema:1):extensions::json_schema:1:10",
      "line": 1,
      "name": "(anonymous extensions::json_schema:1)",
      "selfWeight": 834,
      "totalWeight": 834,
    },
    Frame {
      "col": 16,
      "file": "extensions::utils",
      "key": "expose:extensions::utils:98:16",
      "line": 98,
      "name": "expose",
      "selfWeight": 147,
      "totalWeight": 293,
    },
    Frame {
      "col": 36,
      "file": "extensions::SafeBuiltins",
      "key": "target.(anonymous function):extensions::SafeBuiltins:10:36",
      "line": 10,
      "name": "target.(anonymous function)",
      "selfWeight": 727,
      "totalWeight": 7136,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "Apply:undefined:undefined:undefined",
      "line": undefined,
      "name": "Apply",
      "selfWeight": 2187,
      "totalWeight": 6547,
    },
    Frame {
      "col": 10,
      "file": "extensions::messaging",
      "key": "(anonymous extensions::messaging:1):extensions::messaging:1:10",
      "line": 1,
      "name": "(anonymous extensions::messaging:1)",
      "selfWeight": 151,
      "totalWeight": 428,
    },
    Frame {
      "col": 21,
      "file": "extensions::binding",
      "key": "generate:extensions::binding:199:21",
      "line": 199,
      "name": "generate",
      "selfWeight": 149,
      "totalWeight": 7002,
    },
    Frame {
      "col": 37,
      "file": "extensions::binding",
      "key": "shouldCheckUnprivileged:extensions::binding:209:37",
      "line": 209,
      "name": "shouldCheckUnprivileged",
      "selfWeight": 0,
      "totalWeight": 146,
    },
    Frame {
      "col": 44,
      "file": "extensions::binding",
      "key": "(anonymous extensions::binding:253):extensions::binding:253:44",
      "line": 253,
      "name": "(anonymous extensions::binding:253)",
      "selfWeight": 0,
      "totalWeight": 3651,
    },
    Frame {
      "col": 50,
      "file": "extensions::json_schema",
      "key": "JSONSchemaValidator.addTypes:extensions::json_schema:174:50",
      "line": 174,
      "name": "JSONSchemaValidator.addTypes",
      "selfWeight": 149,
      "totalWeight": 149,
    },
    Frame {
      "col": 46,
      "file": "extensions::binding",
      "key": "(anonymous extensions::binding:271):extensions::binding:271:46",
      "line": 271,
      "name": "(anonymous extensions::binding:271)",
      "selfWeight": 546,
      "totalWeight": 3349,
    },
    Frame {
      "col": 48,
      "file": "extensions::binding",
      "key": "(anonymous extensions::binding:323):extensions::binding:323:48",
      "line": 323,
      "name": "(anonymous extensions::binding:323)",
      "selfWeight": 159,
      "totalWeight": 586,
    },
    Frame {
      "col": 45,
      "file": "extensions::binding",
      "key": "(anonymous extensions::binding:397):extensions::binding:397:45",
      "line": 397,
      "name": "(anonymous extensions::binding:397)",
      "selfWeight": 142,
      "totalWeight": 802,
    },
    Frame {
      "col": 17,
      "file": "extensions::event_bindings",
      "key": "Event:extensions::event_bindings:513:17",
      "line": 513,
      "name": "Event",
      "selfWeight": 139,
      "totalWeight": 527,
    },
    Frame {
      "col": 52,
      "file": "extensions::utils",
      "key": "privates.constructPrivate:extensions::utils:102:52",
      "line": 102,
      "name": "privates.constructPrivate",
      "selfWeight": 0,
      "totalWeight": 388,
    },
    Frame {
      "col": 21,
      "file": "extensions::event_bindings",
      "key": "EventImpl:extensions::event_bindings:213:21",
      "line": 213,
      "name": "EventImpl",
      "selfWeight": 251,
      "totalWeight": 251,
    },
    Frame {
      "col": 27,
      "file": "extensions::binding",
      "key": "addProperties:extensions::binding:425:27",
      "line": 425,
      "name": "addProperties",
      "selfWeight": 149,
      "totalWeight": 710,
    },
    Frame {
      "col": 17,
      "file": "extensions::utils",
      "key": "forEach:extensions::utils:27:17",
      "line": 27,
      "name": "forEach",
      "selfWeight": 0,
      "totalWeight": 561,
    },
    Frame {
      "col": 22,
      "file": "extensions::binding",
      "key": "runHooks_:extensions::binding:180:22",
      "line": 180,
      "name": "runHooks_",
      "selfWeight": 0,
      "totalWeight": 273,
    },
    Frame {
      "col": 47,
      "file": "extensions::binding",
      "key": "(anonymous extensions::binding:181):extensions::binding:181:47",
      "line": 181,
      "name": "(anonymous extensions::binding:181)",
      "selfWeight": 141,
      "totalWeight": 273,
    },
    Frame {
      "col": 36,
      "file": "extensions::runtime",
      "key": "(anonymous extensions::runtime:17):extensions::runtime:17:36",
      "line": 17,
      "name": "(anonymous extensions::runtime:17)",
      "selfWeight": 132,
      "totalWeight": 132,
    },
    Frame {
      "col": 261,
      "file": "chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js",
      "key": "l:chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js:38:261",
      "line": 38,
      "name": "l",
      "selfWeight": 127,
      "totalWeight": 127,
    },
    Frame {
      "col": 44,
      "file": "extensions::utils",
      "key": "publicClassPrototype.(anonymous function):extensions::utils:136:44",
      "line": 136,
      "name": "publicClassPrototype.(anonymous function)",
      "selfWeight": 0,
      "totalWeight": 276,
    },
    Frame {
      "col": 45,
      "file": "extensions::event_bindings",
      "key": "EventImpl.addListener:extensions::event_bindings:273:45",
      "line": 273,
      "name": "EventImpl.addListener",
      "selfWeight": 135,
      "totalWeight": 135,
    },
    Frame {
      "col": 162,
      "file": "chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js",
      "key": "bb:chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js:58:162",
      "line": 58,
      "name": "bb",
      "selfWeight": 146,
      "totalWeight": 146,
    },
    Frame {
      "col": 10,
      "file": "chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js",
      "key": "(anonymous injected.min.js:65):chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js:65:10",
      "line": 65,
      "name": "(anonymous injected.min.js:65)",
      "selfWeight": 141,
      "totalWeight": 1071,
    },
    Frame {
      "col": 47,
      "file": "extensions::SafeBuiltins",
      "key": "(anonymous extensions::SafeBuiltins:66):extensions::SafeBuiltins:66:47",
      "line": 66,
      "name": "(anonymous extensions::SafeBuiltins:66)",
      "selfWeight": 116,
      "totalWeight": 27605,
    },
    Frame {
      "col": 1,
      "file": "chrome-extension://denbgaamihkadbghdceggmchnflmhpmk/contentScript.js",
      "key": "(anonymous contentScript.js:1):chrome-extension://denbgaamihkadbghdceggmchnflmhpmk/contentScript.js:1:1",
      "line": 1,
      "name": "(anonymous contentScript.js:1)",
      "selfWeight": 542,
      "totalWeight": 6115,
    },
    Frame {
      "col": 26,
      "file": "chrome-extension://denbgaamihkadbghdceggmchnflmhpmk/contentScript.js",
      "key": "insertTextScript:chrome-extension://denbgaamihkadbghdceggmchnflmhpmk/contentScript.js:31:26",
      "line": 31,
      "name": "insertTextScript",
      "selfWeight": 392,
      "totalWeight": 874,
    },
    Frame {
      "col": 26,
      "file": "chrome-extension://denbgaamihkadbghdceggmchnflmhpmk/contentScript.js",
      "key": "insertHeaderNode:chrome-extension://denbgaamihkadbghdceggmchnflmhpmk/contentScript.js:58:26",
      "line": 58,
      "name": "insertHeaderNode",
      "selfWeight": 189,
      "totalWeight": 482,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "appendChild:undefined:undefined:undefined",
      "line": undefined,
      "name": "appendChild",
      "selfWeight": 145,
      "totalWeight": 293,
    },
    Frame {
      "col": 1,
      "file": undefined,
      "key": "(anonymous):undefined:1:1",
      "line": 1,
      "name": "(anonymous)",
      "selfWeight": 0,
      "totalWeight": 148,
    },
    Frame {
      "col": 14,
      "file": undefined,
      "key": "(anonymous):undefined:7:14",
      "line": 7,
      "name": "(anonymous)",
      "selfWeight": 148,
      "totalWeight": 148,
    },
    Frame {
      "col": 26,
      "file": "chrome-extension://denbgaamihkadbghdceggmchnflmhpmk/contentScript.js",
      "key": "listenForMessage:chrome-extension://denbgaamihkadbghdceggmchnflmhpmk/contentScript.js:25:26",
      "line": 25,
      "name": "listenForMessage",
      "selfWeight": 0,
      "totalWeight": 4699,
    },
    Frame {
      "col": 10,
      "file": "extensions::uncaught_exception_handler",
      "key": "(anonymous extensions::uncaught_exception_handler:1):extensions::uncaught_exception_handler:1:10",
      "line": 1,
      "name": "(anonymous extensions::uncaught_exception_handler:1)",
      "selfWeight": 121,
      "totalWeight": 121,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "(anonymous):undefined:undefined:undefined",
      "line": undefined,
      "name": "(anonymous)",
      "selfWeight": 135,
      "totalWeight": 135,
    },
    Frame {
      "col": 9,
      "file": "http://127.0.0.1:8081/worker.html",
      "key": "(anonymous worker.html:1):http://127.0.0.1:8081/worker.html:1:9",
      "line": 1,
      "name": "(anonymous worker.html:1)",
      "selfWeight": 0,
      "totalWeight": 939,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "Worker:undefined:undefined:undefined",
      "line": undefined,
      "name": "Worker",
      "selfWeight": 416,
      "totalWeight": 939,
    },
    Frame {
      "col": 12,
      "file": "chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js",
      "key": "cb:chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js:50:12",
      "line": 50,
      "name": "cb",
      "selfWeight": 0,
      "totalWeight": 359,
    },
    Frame {
      "col": 315,
      "file": "chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js",
      "key": "$a:chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js:47:315",
      "line": 47,
      "name": "$a",
      "selfWeight": 278,
      "totalWeight": 359,
    },
    Frame {
      "col": 52,
      "file": "chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js",
      "key": "(anonymous injected.min.js:51):chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js:51:52",
      "line": 51,
      "name": "(anonymous injected.min.js:51)",
      "selfWeight": 0,
      "totalWeight": 683,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "setTimeout:undefined:undefined:undefined",
      "line": undefined,
      "name": "setTimeout",
      "selfWeight": 63,
      "totalWeight": 704,
    },
    Frame {
      "col": 145,
      "file": "chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js",
      "key": "(anonymous injected.min.js:51):chrome-extension://aomjjhallfgjeglblehebfpbcfeobpgk/injected.min.js:51:145",
      "line": 51,
      "name": "(anonymous injected.min.js:51)",
      "selfWeight": 117,
      "totalWeight": 678,
    },
    Frame {
      "col": 30,
      "file": "http://127.0.0.1:8081/worker.html",
      "key": "worker.onmessage:http://127.0.0.1:8081/worker.html:20:30",
      "line": 20,
      "name": "worker.onmessage",
      "selfWeight": 0,
      "totalWeight": 21103,
    },
    Frame {
      "col": 17,
      "file": "http://127.0.0.1:8081/worker.html",
      "key": "apple:http://127.0.0.1:8081/worker.html:10:17",
      "line": 10,
      "name": "apple",
      "selfWeight": 660,
      "totalWeight": 20852,
    },
    Frame {
      "col": 18,
      "file": "http://127.0.0.1:8081/worker.html",
      "key": "banana:http://127.0.0.1:8081/worker.html:2:18",
      "line": 2,
      "name": "banana",
      "selfWeight": 18755,
      "totalWeight": 20192,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "postMessage:undefined:undefined:undefined",
      "line": undefined,
      "name": "postMessage",
      "selfWeight": 251,
      "totalWeight": 251,
    },
  ],
  "name": "worker.json - CrRendererMain",
  "stacks": Array [
    " 15.06ms",
    "(anonymous extensions::SafeBuiltins:1);(anonymous extensions::SafeBuiltins:1);saveBuiltin;makeCallable;(anonymous extensions::SafeBuiltins:8) 102.00µs",
    "(anonymous extensions::SafeBuiltins:1);(anonymous extensions::SafeBuiltins:1);saveBuiltin 92.00µs",
    "(anonymous extensions::SafeBuiltins:1);(anonymous extensions::SafeBuiltins:1);saveBuiltin;(program) 2.62ms",
    " 312.00µs",
    "(program) 295.00µs",
    " 105.00µs",
    "(program) 306.00µs",
    " 111.00µs",
    "(program) 109.00µs",
    " 197.00µs",
    "(program) 110.00µs",
    "(program);(garbage collector) 102.00µs",
    "(program) 1.25ms",
    "(anonymous extensions::SafeBuiltins:1);(anonymous extensions::SafeBuiltins:1);saveBuiltin 141.00µs",
    "(anonymous extensions::SafeBuiltins:1);(anonymous extensions::SafeBuiltins:1);saveBuiltin;makeCallable 122.00µs",
    "(anonymous extensions::SafeBuiltins:1);(anonymous extensions::SafeBuiltins:1);saveBuiltin;makeCallable;(program) 6.65ms",
    "(anonymous injected.min.js:1) 598.00µs",
    "(anonymous injected.min.js:1);(garbage collector) 778.00µs",
    "(anonymous injected.min.js:1) 660.00µs",
    "(anonymous injected.min.js:1);La 407.00µs",
    "(anonymous injected.min.js:1);La;get webstore 139.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1) 1.15ms",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);privates 132.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::binding:1) 791.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::binding:1);privates 135.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::binding:1);privates;(anonymous extensions::event_bindings:1) 669.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::binding:1);privates;(anonymous extensions::event_bindings:1);privates;(anonymous extensions::sendRequest:1) 375.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::binding:1);privates;(anonymous extensions::event_bindings:1);privates;(anonymous extensions::sendRequest:1);privates 134.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::binding:1);privates;(anonymous extensions::event_bindings:1);privates;(anonymous extensions::sendRequest:1) 256.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::binding:1);privates;(anonymous extensions::event_bindings:1);privates;(anonymous extensions::sendRequest:1);privates 135.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::binding:1);privates;(anonymous extensions::event_bindings:1);privates;(anonymous extensions::sendRequest:1);privates;(anonymous extensions::schemaUtils:1) 847.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::binding:1);privates;(anonymous extensions::event_bindings:1);privates;(anonymous extensions::sendRequest:1);privates;(anonymous extensions::schemaUtils:1);privates 133.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::binding:1);privates;(anonymous extensions::event_bindings:1);privates;(anonymous extensions::sendRequest:1);privates;(anonymous extensions::schemaUtils:1);privates;(anonymous extensions::json_schema:1) 580.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::binding:1);privates;(anonymous extensions::event_bindings:1) 153.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::binding:1);privates;(anonymous extensions::event_bindings:1);expose;target.(anonymous function);Apply 146.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1) 744.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::messaging:1) 151.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::messaging:1);expose 147.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);privates 141.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1) 146.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);privates 139.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1) 142.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;privates 120.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;shouldCheckUnprivileged;target.(anonymous function);Apply 146.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply 259.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:253);JSONSchemaValidator.addTypes 149.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:253);target.(anonymous function);Apply 153.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:253);target.(anonymous function);Apply;(anonymous extensions::binding:271);target.(anonymous function);Apply 251.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:253);target.(anonymous function);Apply;(anonymous extensions::binding:271);target.(anonymous function) 292.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:253);target.(anonymous function);Apply;(anonymous extensions::binding:271) 295.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply 152.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:323) 159.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:323);privates 135.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:397);privates 133.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:397);Event 139.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:397);Event;privates.constructPrivate;target.(anonymous function);Apply 137.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:397);Event;privates.constructPrivate;target.(anonymous function);Apply;EventImpl 125.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:397) 142.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;addProperties 149.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;addProperties;forEach;target.(anonymous function);Apply 126.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate 149.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;runHooks_;target.(anonymous function);Apply;(anonymous extensions::binding:181) 141.00µs",
    "(anonymous injected.min.js:1);La;get webstore;(anonymous extensions::runtime:1);generate;runHooks_;target.(anonymous function);Apply;(anonymous extensions::binding:181);(anonymous extensions::runtime:17) 132.00µs",
    "(anonymous injected.min.js:1) 160.00µs",
    "(anonymous injected.min.js:1);l 127.00µs",
    "(anonymous injected.min.js:1) 132.00µs",
    "(anonymous injected.min.js:1);publicClassPrototype.(anonymous function);target.(anonymous function);Apply 141.00µs",
    "(anonymous injected.min.js:1);publicClassPrototype.(anonymous function);target.(anonymous function);Apply;EventImpl.addListener 135.00µs",
    "(anonymous injected.min.js:1);bb 146.00µs",
    "(anonymous injected.min.js:1);(anonymous injected.min.js:65) 141.00µs",
    "(anonymous injected.min.js:1);(anonymous injected.min.js:65);(program) 930.00µs",
    "(anonymous extensions::SafeBuiltins:1);(anonymous extensions::SafeBuiltins:1);saveBuiltin;makeCallable;(anonymous extensions::SafeBuiltins:8) 132.00µs",
    "(anonymous extensions::SafeBuiltins:1);(anonymous extensions::SafeBuiltins:1);(anonymous extensions::SafeBuiltins:66) 116.00µs",
    "(anonymous extensions::SafeBuiltins:1);(anonymous extensions::SafeBuiltins:1);(anonymous extensions::SafeBuiltins:66);(program) 27.49ms",
    "(anonymous contentScript.js:1) 542.00µs",
    "(anonymous contentScript.js:1);insertTextScript 392.00µs",
    "(anonymous contentScript.js:1);insertTextScript;insertHeaderNode 189.00µs",
    "(anonymous contentScript.js:1);insertTextScript;insertHeaderNode;appendChild;(anonymous);(anonymous) 148.00µs",
    "(anonymous contentScript.js:1);insertTextScript;insertHeaderNode;appendChild 145.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore 148.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::binding:1);privates;(anonymous extensions::event_bindings:1);privates;(anonymous extensions::uncaught_exception_handler:1) 121.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::binding:1);privates;(anonymous extensions::event_bindings:1);privates;(anonymous extensions::sendRequest:1) 130.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::binding:1);privates;(anonymous extensions::event_bindings:1);privates;(anonymous extensions::sendRequest:1);privates;(anonymous extensions::schemaUtils:1);privates;(anonymous extensions::json_schema:1) 254.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::binding:1);privates;(anonymous extensions::event_bindings:1);(anonymous) 135.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1);privates 122.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1);privates;(anonymous extensions::messaging:1);target.(anonymous function);Apply 130.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1) 141.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function) 154.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:253);target.(anonymous function);Apply;(anonymous extensions::binding:271) 123.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:253);target.(anonymous function);Apply;(anonymous extensions::binding:271);target.(anonymous function) 137.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:253);target.(anonymous function);Apply;(anonymous extensions::binding:271);target.(anonymous function);Apply 257.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:253);target.(anonymous function);Apply;(anonymous extensions::binding:271);target.(anonymous function);Apply;(garbage collector) 1.58ms",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:253);target.(anonymous function);Apply;(anonymous extensions::binding:271) 128.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:253);target.(anonymous function);Apply;(anonymous extensions::binding:271);target.(anonymous function);Apply 289.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:323);privates 292.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1);generate;target.(anonymous function);Apply;(anonymous extensions::binding:397);Event;privates.constructPrivate;target.(anonymous function);Apply;EventImpl 126.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1);generate;addProperties;forEach;target.(anonymous function) 144.00µs",
    "(anonymous contentScript.js:1);listenForMessage;get webstore;(anonymous extensions::runtime:1);generate;addProperties;forEach;target.(anonymous function);(program) 291.00µs",
    "(anonymous worker.html:1);Worker 416.00µs",
    "(anonymous worker.html:1);Worker;(program) 523.00µs",
    "cb;$a 278.00µs",
    "cb;$a;(program) 81.00µs",
    "(anonymous injected.min.js:51);setTimeout 42.00µs",
    "(anonymous injected.min.js:51);setTimeout;(program) 641.00µs",
    "(anonymous injected.min.js:51);setTimeout 21.00µs",
    "(anonymous injected.min.js:51) 117.00µs",
    "(anonymous injected.min.js:51);(program) 540.00µs",
    " 511.00µs",
    "(program) 125.00µs",
    " 136.00µs",
    "(program) 1.06ms",
    " 133.00µs",
    "(program) 1.46ms",
    " 261.00µs",
    "(program) 147.00µs",
    " 4.74ms",
    "(program) 145.00µs",
    " 525.00µs",
    "(program) 221.00µs",
    " 325.00µs",
    "(program) 399.00µs",
    " 146.00µs",
    "(program) 391.00µs",
    " 4.01ms",
    "(program) 131.00µs",
    " 1.10ms",
    "(program) 146.00µs",
    " 2.91ms",
    "(program) 280.00µs",
    "worker.onmessage;apple;banana 420.00µs",
    "worker.onmessage;apple 128.00µs",
    "worker.onmessage;apple;banana 1.27ms",
    "worker.onmessage;apple 146.00µs",
    "worker.onmessage;apple;banana 1.06ms",
    "worker.onmessage;apple 130.00µs",
    "worker.onmessage;apple;banana 129.00µs",
    "worker.onmessage;postMessage 143.00µs",
    " 1.80ms",
    "worker.onmessage;apple;banana 1.53ms",
    "worker.onmessage;postMessage 108.00µs",
    " 1.63ms",
    "(program) 141.00µs",
    "worker.onmessage;apple;banana 1.86ms",
    " 1.75ms",
    "worker.onmessage;apple;banana 1.67ms",
    " 1.84ms",
    "worker.onmessage;apple;banana 1.62ms",
    "worker.onmessage;apple;banana;(program) 146.00µs",
    " 1.67ms",
    "worker.onmessage;apple;banana 1.45ms",
    "worker.onmessage;apple;banana;(garbage collector) 923.00µs",
    "worker.onmessage;apple;banana 136.00µs",
    "worker.onmessage;apple;banana;(program) 132.00µs",
    " 1.81ms",
    "(program) 136.00µs",
    "worker.onmessage;apple;banana 1.69ms",
    " 1.75ms",
    "(program) 131.00µs",
    "worker.onmessage;apple;banana 282.00µs",
    "worker.onmessage;apple 128.00µs",
    "worker.onmessage;apple;banana 1.10ms",
    "worker.onmessage;apple;banana;(program) 136.00µs",
    " 1.57ms",
    "worker.onmessage;apple;banana 665.00µs",
    "worker.onmessage;apple 128.00µs",
    "worker.onmessage;apple;banana 779.00µs",
    " 1.56ms",
    "(program) 131.00µs",
    "worker.onmessage;apple;banana 1.56ms",
    " 1.57ms",
    "(program) 149.00µs",
    "worker.onmessage;apple;banana 1.54ms",
    "worker.onmessage;apple;banana;(program) 100.00µs",
    " 52.45ms",
    "(program) 125.00µs",
    " 88.71ms",
    "(program) 1.06ms",
  ],
}
`;

exports[`importFromChromeTimeline Workers Chrome 70 2`] = `
Object {
  "frames": Array [
    Frame {
      "col": 21,
      "file": "http://127.0.0.1:8081/worker.js",
      "key": "onmessage:http://127.0.0.1:8081/worker.js:15:21",
      "line": 15,
      "name": "onmessage",
      "selfWeight": 402,
      "totalWeight": 187278,
    },
    Frame {
      "col": 15,
      "file": "http://127.0.0.1:8081/worker.js",
      "key": "alpha:http://127.0.0.1:8081/worker.js:9:15",
      "line": 9,
      "name": "alpha",
      "selfWeight": 7945,
      "totalWeight": 177837,
    },
    Frame {
      "col": 15,
      "file": "http://127.0.0.1:8081/worker.js",
      "key": "gamma:http://127.0.0.1:8081/worker.js:1:15",
      "line": 1,
      "name": "gamma",
      "selfWeight": 13631,
      "totalWeight": 21888,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "(program):undefined:undefined:undefined",
      "line": undefined,
      "name": "(program)",
      "selfWeight": 164753,
      "totalWeight": 164753,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "postMessage:undefined:undefined:undefined",
      "line": undefined,
      "name": "postMessage",
      "selfWeight": 547,
      "totalWeight": 5452,
    },
  ],
  "name": "worker.json - DedicatedWorker thread",
  "stacks": Array [
    " 4.33ms",
    "onmessage;alpha;gamma 604.00µs",
    "onmessage;alpha 1.38ms",
    "onmessage;alpha;gamma 3.31ms",
    "onmessage 270.00µs",
    "onmessage;(program) 3.59ms",
    "onmessage;alpha;gamma 127.00µs",
    "onmessage;alpha 128.00µs",
    "onmessage;alpha;gamma 1.48ms",
    "onmessage;alpha;gamma;(program) 1.68ms",
    "onmessage;alpha;gamma 1.65ms",
    "onmessage;alpha;gamma;(program) 2.00ms",
    "onmessage;alpha;gamma 1.62ms",
    "onmessage;postMessage 146.00µs",
    "onmessage;postMessage;(program) 1.65ms",
    "onmessage;alpha;gamma 1.70ms",
    "onmessage;postMessage 256.00µs",
    "onmessage;postMessage;(program) 1.63ms",
    "onmessage;alpha;gamma 670.00µs",
    "onmessage;alpha 134.00µs",
    "onmessage;alpha;gamma 899.00µs",
    "onmessage;alpha;gamma;(program) 2.72ms",
    "onmessage 132.00µs",
    "onmessage;alpha;gamma 1.57ms",
    "onmessage;alpha;gamma;(program) 1.85ms",
    "onmessage;alpha 1.75ms",
    "onmessage;alpha;(program) 1.76ms",
    "onmessage;alpha 1.44ms",
    "onmessage;postMessage 145.00µs",
    "onmessage;postMessage;(program) 1.63ms",
    "onmessage;alpha 1.57ms",
    "onmessage;alpha;(program) 1.60ms",
    "onmessage;alpha 1.55ms",
    "onmessage;alpha;(program) 144.64ms",
  ],
}
`;

exports[`importFromChromeTimeline Workers Chrome 70: indexToView 1`] = `0`;

exports[`importFromChromeTimeline Workers Chrome 70: profileGroup.name 1`] = `"worker.json"`;

exports[`importFromChromeTimeline chunked 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": 0,
      "file": "",
      "key": "(program)::0:0",
      "line": 0,
      "name": "(program)",
      "selfWeight": 2299,
      "totalWeight": 2299,
    },
    Frame {
      "col": 11,
      "file": "file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js",
      "key": "a:file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js:1:11",
      "line": 1,
      "name": "a",
      "selfWeight": 0,
      "totalWeight": 33186,
    },
    Frame {
      "col": 11,
      "file": "file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js",
      "key": "c:file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js:14:11",
      "line": 14,
      "name": "c",
      "selfWeight": 16275,
      "totalWeight": 16275,
    },
    Frame {
      "col": 11,
      "file": "file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js",
      "key": "b:file:///Users/jlfwong/code/speedscope/sample/programs/javascript/simple.js:8:11",
      "line": 8,
      "name": "b",
      "selfWeight": 16911,
      "totalWeight": 16911,
    },
  ],
  "name": "simple-timeline.json",
  "stacks": Array [
    " 10.06ms",
    "(program) 202.00µs",
    " 1.97ms",
    "(program) 1.04ms",
    " 85.89ms",
    "(program) 132.00µs",
    " 8.40ms",
    "(program) 134.00µs",
    "a;c 273.00µs",
    "a;b 513.00µs",
    "a;c 512.00µs",
    "a;b 513.00µs",
    "a;c 262.00µs",
    "a;b 514.00µs",
    "a;c 517.00µs",
    "a;b 261.00µs",
    "a;c 515.00µs",
    "a;b 273.00µs",
    "a;c 134.00µs",
    "a;b 146.00µs",
    "a;c 291.00µs",
    "a;b 256.00µs",
    "a;c 145.00µs",
    "a;b 134.00µs",
    "a;c 273.00µs",
    "a;b 141.00µs",
    "a;c 139.00µs",
    "a;b 130.00µs",
    "a;c 393.00µs",
    "a;b 131.00µs",
    "a;c 126.00µs",
    "a;b 129.00µs",
    "a;c 520.00µs",
    "a;b 129.00µs",
    "a;c 259.00µs",
    "a;b 130.00µs",
    "a;c 128.00µs",
    "a;b 136.00µs",
    "a;c 137.00µs",
    "a;b 281.00µs",
    "a;c 150.00µs",
    "a;b 624.00µs",
    "a;c 135.00µs",
    "a;b 129.00µs",
    "a;c 604.00µs",
    "a;b 292.00µs",
    "a;c 257.00µs",
    "a;b 127.00µs",
    "a;c 128.00µs",
    "a;b 118.00µs",
    "a;c 256.00µs",
    "a;b 524.00µs",
    "a;c 129.00µs",
    "a;b 131.00µs",
    "a;c 125.00µs",
    "a;b 263.00µs",
    "a;c 123.00µs",
    "a;b 128.00µs",
    "a;c 129.00µs",
    "a;b 265.00µs",
    "a;c 128.00µs",
    "a;b 280.00µs",
    "a;c 366.00µs",
    "a;b 931.00µs",
    "a;c 148.00µs",
    "a;b 147.00µs",
    "a;c 302.00µs",
    "a;b 151.00µs",
    "a;c 158.00µs",
    "a;b 456.00µs",
    "a;c 170.00µs",
    "a;b 139.00µs",
    "a;c 145.00µs",
    "a;b 260.00µs",
    "a;c 141.00µs",
    "a;b 280.00µs",
    "a;c 268.00µs",
    "a;b 289.00µs",
    "a;c 146.00µs",
    "a;b 120.00µs",
    "a;c 436.00µs",
    "a;b 147.00µs",
    "a;c 164.00µs",
    "a;b 294.00µs",
    "a;c 147.00µs",
    "a;b 856.00µs",
    "a;c 273.00µs",
    "a;b 139.00µs",
    "a;c 269.00µs",
    "a;b 256.00µs",
    "a;c 258.00µs",
    "a;b 128.00µs",
    "a;c 255.00µs",
    "a;b 140.00µs",
    "a;c 514.00µs",
    "a;b 129.00µs",
    "a;c 395.00µs",
    "a;b 389.00µs",
    "a;c 257.00µs",
    "a;b 686.00µs",
    "a;c 147.00µs",
    "a;b 156.00µs",
    "a;c 137.00µs",
    "a;b 141.00µs",
    "a;c 140.00µs",
    "a;b 141.00µs",
    "a;c 141.00µs",
    "a;b 140.00µs",
    "a;c 140.00µs",
    "a;b 139.00µs",
    "a;c 129.00µs",
    "a;b 149.00µs",
    "a;c 267.00µs",
    "a;b 294.00µs",
    "a;c 145.00µs",
    "a;b 294.00µs",
    "a;c 294.00µs",
    "a;b 295.00µs",
    "a;c 140.00µs",
    "a;b 139.00µs",
    "a;c 139.00µs",
    "a;b 127.00µs",
    "a;c 513.00µs",
    "a;b 516.00µs",
    "a;c 385.00µs",
    "a;b 520.00µs",
    "a;c 252.00µs",
    "a;b 255.00µs",
    "a;c 134.00µs",
    "a;b 112.00µs",
    "a;c 140.00µs",
    "a;b 296.00µs",
    "a;c 441.00µs",
    "a;b 145.00µs",
    "a;c 292.00µs",
    "a;b 130.00µs",
    "a;c 277.00µs",
    "a;b 147.00µs",
    "a;c 286.00µs",
    "a;b 140.00µs",
    "a;c 136.00µs",
    " 61.59ms",
    "(program) 134.00µs",
    " 128.00µs",
    "(program) 141.00µs",
    " 16.39ms",
    "(program) 145.00µs",
    " 16.63ms",
    "(program) 131.00µs",
    " 16.71ms",
    "(program) 131.00µs",
    " 294.15ms",
    "(program) 109.00µs",
  ],
}
`;

exports[`importFromChromeTimeline chunked: indexToView 1`] = `0`;

exports[`importFromChromeTimeline chunked: profileGroup.name 1`] = `"simple-timeline.json"`;

exports[`importFromChromeTimeline: indexToView 1`] = `0`;

exports[`importFromChromeTimeline: profileGroup.name 1`] = `"simple-timeline.json"`;

exports[`importFromV8Profiler Node 10 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": 1,
      "file": "",
      "key": "(anonymous)::1:1",
      "line": 1,
      "name": "(anonymous)",
      "selfWeight": 11575,
      "totalWeight": 44777,
    },
    Frame {
      "col": 1,
      "file": "",
      "key": "a::1:1",
      "line": 1,
      "name": "a",
      "selfWeight": 0,
      "totalWeight": 33202,
    },
    Frame {
      "col": 1,
      "file": "",
      "key": "b::6:1",
      "line": 6,
      "name": "b",
      "selfWeight": 0,
      "totalWeight": 16788,
    },
    Frame {
      "col": 1,
      "file": "",
      "key": "d::14:1",
      "line": 14,
      "name": "d",
      "selfWeight": 33202,
      "totalWeight": 33202,
    },
    Frame {
      "col": 1,
      "file": "",
      "key": "c::10:1",
      "line": 10,
      "name": "c",
      "selfWeight": 0,
      "totalWeight": 16414,
    },
  ],
  "name": "example.cpuprofile",
  "stacks": Array [
    " 599.29ms",
    "(anonymous) 11.57ms",
    "(anonymous);a;b;d 16.79ms",
    "(anonymous);a;c;d 16.41ms",
  ],
}
`;

exports[`importFromV8Profiler Node 10: indexToView 1`] = `0`;

exports[`importFromV8Profiler Node 10: profileGroup.name 1`] = `"example.cpuprofile"`;
